# oc_lettings

./: .gitignore  Dockerfile  README.md  data.json  oc-lettings-site.sqlite3  pyproject.toml  requirements.txt
.circleci/: config.yml
config/: settings.py  urls.py
lettings/: tests.py  urls.py  views.py
lettings/migrations/: 0001_initial.py
oc_lettings_site/: settings.py  tests.py  urls.py
profiles/: tests.py  urls.py  views.py
profiles/migrations/: 0001_initial.py
profiles/templates/: index.html
