[tool.poetry]
name = "python-oc-lettings-fr"
version = "0.1.0"
description = ""
authors = [""]

[tool.poetry.dependencies]
python = "^3.9"
Django = "3.0"
flake8 = "3.7.0"
pytest-django = "3.9.0"
six = "^1.16.0"
sentry-sdk = "^1.5.1"
python-dotenv = "^0.19.2"
gunicorn = "^20.1.0"
psycopg2-binary = "2.8.6"
django-on-heroku = "^1.1.2"

[tool.poetry.dev-dependencies]
black = {version = "^21.12b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
